--- a/gca.html
+++ b/gca.html
@@ -20,6 +20,15 @@
         <div id="game-content"></div>
     </div>
 
+    <!-- Debug Overlay (hidden by default, toggled with ` key) -->
+    <div id="debug-overlay" class="debug-overlay" style="display: none">
+        <div class="debug-overlay-header">
+            <span><b>Debug Overlay</b></span>
+            <button id="debug-close-btn" class="debug-close-btn">×</button>
+        </div>
+        <div id="debug-content" class="debug-content"></div>
+    </div>
+
     <!-- Core Systems -->
     <script src="src/core/Game.js"></script>
     <script src="src/core/Constants.js"></script>
